--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,17 +7,23 @@
 
 body {
     margin: 0;
+    padding-top: 80px;
     font-family: 'Times New Roman', serif;
     background: #f5f5f5;
 }
 
 .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
+    z-index: 999;
     background: #f6fafd;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 25px 60px;
+    box-shadow:0 0 25px rgba(0,0,0,0.18);
 }
 
 .logo img {
@@ -101,12 +107,25 @@ section{
 }
 
 /* ===== HERO BANNER ===== */
-.hero{
-    width: auto;
-    height: 350px;
-    background:#d9d9d9;
+.hero-section {
+    position: relative;
+    width: 100%;
+    height: 450px; 
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.hero-background {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: brightness(0.75); 
+}
 
 /* ===== ABOUT SECTION ===== */
 .about-container{
