--- a/public/css/katalog.css
+++ b/public/css/katalog.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding-top: 80px;
     background: #f2f5f7;
-    font-family: 'Times New Roman', serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 /* KONTENER KATEGORI */
