--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     padding-top: 80px;
-    font-family: 'Times New Roman', serif;
+    font-family: 'Poppins', sans-serif;
     background: #f5f5f5;
 }
 
