--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,6 +61,13 @@ body {
     height:3px;
     background:#000;
 }
+.card img,
+.card-img {
+    width: 100%;
+    height: 200px;        /* tinggi seragam */
+    object-fit: cover;    /* PENTING: tidak stretch */
+    border-radius: 12px 12px 0 0;
+}
 
 /* ======== RESPONSIVE MODE ======== */
 @media(max-width:768px) {
